--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,23 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+        "laravel/framework": "^6.0",
+        "php": "^7.1"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "7.1.*"
+    },
     "autoload": {
         "psr-4": {
             "Mayckol\\CtResponse\\": "src/"
         }
+    },
+    "extra": {
+    "laravel": {
+        "providers": [
+            "Mayckol\\CtResponse\\CtResponseServiceProvider"
+        ]
     }
+}
 }
